<resources>
    <string name="app_name">Campus Connect</string>
    <string name="title">Title</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore </string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_chats">Chats</string>
    <string name="title_profile">Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_a_account">Already have a account?</string>
    <string name="_91">+91</string>
    <string name="or">Or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_up_with_google">Sign in with Google</string>
    <string name="next">Next</string>
    <string name="verification_code_has_been_sent_on">Verification Code has been sent on</string>
    <string name="_91123456789">+91123456789</string>
    <string name="didn_t_recived_otp">Didn\'t received Otp?</string>
    <string name="re_send">re-Send</string>
    <string name="verify">Verify</string>
    <string name="_00_00">00:00</string>
    <string name="login_msg">Welcome! Please Login to continue</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_github">Sign In with Github</string>
    <string name="default_sign_in_client_id">794211080951-9qcotvtrlsjcmdjjq7rc4u2co3okh02r.apps.googleusercontent.com</string>
    <string name="hi">Hi,</string>
    <string name="username">UserName</string>
    <string name="wave_sign">👋</string>
    <string name="title_activity_complete_registration">CompleteRegistrationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="full_name">Full Name</string>
    <string name="country_code_and_phone_number">Country Code and Phone Number</string>
    <string name="university_collage">University/Collage</string>
    <string name="course">Course</string>
    <string name="save">Save</string>
    <string name="complete_your_registration">Complete your Registration</string>
    <string name="error_msg">Something went wrong!! Please try Again</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="your_skills_seperated_by">Your Skills separated by ,</string>
    <string name="about_you">About You.</string>
    <string name="_continue">Continue</string>
    <string name="add_certification">Add Certification</string>
    <string name="add_project">Add Project</string>
    <string name="certificate_id">Credential Id</string>
    <string name="issuing_organization">Issuing organization</string>
    <string name="issue_date">Issue Date</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="add">Add</string>
    <string name="something_went_wrong_please_try_again">Something Went wrong Please try Again!!</string>
</resources>