<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave_background"
    tools:context=".CompleteRegistrationActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:layout_margin="@dimen/_10dp"
        android:background="@color/transparent"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        android:gravity="center"
        android:text="@string/complete_your_registration"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_userProfilePic"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_150dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:shapeAppearanceOverlay="@style/CircleImageShape" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/et_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:autofillHints="name"
            android:hint="@string/full_name"
            android:inputType="text"
            android:maxLength="30"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_18sp" />

        <EditText
            android:id="@+id/et_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:autofillHints="name"
            android:hint="@string/country_code_and_phone_number"
            android:inputType="phone"
            android:maxLength="13"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_18sp" />

        <EditText
            android:id="@+id/et_collageName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:autofillHints="name"
            android:hint="@string/university_collage"
            android:inputType="text"
            android:maxLength="30"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_18sp" />

        <EditText
            android:id="@+id/et_courseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:autofillHints="name"
            android:hint="@string/course"
            android:inputType="text"
            android:maxLength="30"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_saveInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20dp"
            android:text="@string/save"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>