<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.SignUpActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_backSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        android:background="@color/transparent"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/_300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_80dp"
        android:layout_marginBottom="@dimen/_80dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_12dp"
        app:cardElevation="@dimen/_15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_userName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_marginEnd="@dimen/_15dp"
                android:hint="@string/user_name"
                android:textColorHint="@color/gray"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="@dimen/_1dp"
                app:hintTextColor="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_countryCode"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15dp"
                    android:layout_marginTop="@dimen/_15dp"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/gray"
                    app:placeholderText="+91"
                    app:placeholderTextAppearance="@color/black"
                    app:placeholderTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_countryCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:singleLine="true"
                        android:text="@string/_91"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_phoneNumber"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_15dp"
                    android:layout_marginEnd="@dimen/_15dp"
                    android:hint="@string/phone_number"
                    android:textColorHint="@color/gray"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_newPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_marginEnd="@dimen/_15dp"
                android:hint="@string/new_password"
                android:textColorHint="@color/gray"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/gray"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_confirmPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_marginEnd="@dimen/_15dp"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/gray"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/gray"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:background="@drawable/button_background"
                android:text="@string/next"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_a_account"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_16sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>