<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_whte_top_curve"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <View
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_5dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/bottom_sheet_thumb" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:background="@drawable/edit_text_background"
        android:cursorVisible="true"
        android:hint="@string/title"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingStart="@dimen/_10dp"
        android:paddingTop="@dimen/_8dp"
        android:paddingEnd="@dimen/_10dp"
        android:paddingBottom="@dimen/_8dp"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHint="@color/light_grey"
        android:textCursorDrawable="@drawable/edite_text_cursor"
        android:textSize="@dimen/_18sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/etId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:background="@drawable/edit_text_background"
        android:cursorVisible="true"
        android:hint="@string/certificate_id"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingStart="@dimen/_10dp"
        android:paddingTop="@dimen/_8dp"
        android:paddingEnd="@dimen/_10dp"
        android:paddingBottom="@dimen/_8dp"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHint="@color/light_grey"
        android:textCursorDrawable="@drawable/edite_text_cursor"
        android:textSize="@dimen/_18sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/etIssuingOrg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:background="@drawable/edit_text_background"
        android:cursorVisible="true"
        android:hint="@string/issuing_organization"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingStart="@dimen/_10dp"
        android:paddingTop="@dimen/_8dp"
        android:paddingEnd="@dimen/_10dp"
        android:paddingBottom="@dimen/_8dp"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHint="@color/light_grey"
        android:textCursorDrawable="@drawable/edite_text_cursor"
        android:textSize="@dimen/_18sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/etIssueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background"
            android:cursorVisible="true"
            android:focusable="false"
            android:hint="@string/issue_date"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:paddingStart="@dimen/_10dp"
            android:paddingTop="@dimen/_8dp"
            android:paddingEnd="@dimen/_5dp"
            android:paddingBottom="@dimen/_8dp"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey"
            android:textCursorDrawable="@drawable/edite_text_cursor"
            android:textSize="@dimen/_18sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/etExpirationDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background"
            android:cursorVisible="true"
            android:focusable="false"
            android:hint="@string/expiration_date"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:paddingStart="@dimen/_10dp"
            android:paddingTop="@dimen/_8dp"
            android:paddingEnd="@dimen/_10dp"
            android:paddingBottom="@dimen/_8dp"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey"
            android:textCursorDrawable="@drawable/edite_text_cursor"
            android:textSize="@dimen/_18sp"
            android:textStyle="normal" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_40dp"
        android:backgroundTint="@color/blue"
        android:text="@string/add"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold" />


</LinearLayout>